# FTLLexEngine

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PATENTS.md  PROTOCOL_AFAD.md  PROTOCOL_AFAD_ANALYSIS.md  PROTOCOL_AFAD_v2.1.md  PROTOCOL_AFAD_v2.2.md  PROTOCOL_AFAD_v3.0.md  README.md  check.sh  pyproject.toml
.codex/: AGENTS_EXTRA.md  AGENTS_SQLITE3MC233_SQLITE353.md
.github/workflows/: publish.yml  test.yml
docs/: CUSTOM_FUNCTIONS_GUIDE.md  DATA_INTEGRITY_ARCHITECTURE.md  DOC_00_Index.md  DOC_01_Core.md  DOC_02_SyntaxExpressions.md  DOC_02_SyntaxTypes.md  DOC_02_Types.md  DOC_03_LocaleParsing.md  DOC_03_Parsing.md  DOC_04_Analysis.md  DOC_04_Introspection.md  DOC_04_Runtime.md  DOC_04_RuntimeUtilities.md  DOC_05_Diagnostics.md  DOC_05_Errors.md  DOC_06_Testing.md  FUZZING_GUIDE.md  FUZZING_GUIDE_ATHERIS.md  FUZZING_GUIDE_HYPOFUZZ.md  LOCALE_GUIDE.md  MIGRATION.md  PARSING_GUIDE.md  QUICK_REFERENCE.md  RELEASE_PROTOCOL.md  TERMINOLOGY.md  THREAD_SAFETY.md  TYPE_HINTS_GUIDE.md  VALIDATION_GUIDE.md  WORKFLOW_TOUR.md
examples/: .pylintrc  README.md  README_TYPE_CHECKING.md  async_bundle.py  benchmark_loaders.py  bidirectional_formatting.py  custom_functions.py  ftl_linter.py  ftl_transform.py  function_introspection.py  locale_fallback.py  mypy.ini  parser_only.py  property_based_testing.py  quickstart.py  streaming_resources.py  thread_safety.py
examples/stubs/: threading.pyi
fuzz/: README.md  __init__.py  bridge.py  builtins.py  cache.py  currency.py  cursor.py  dates.py  diagnostics.py  evolution.py  fallback.py  fiscal.py  fuzz_bridge.py  fuzz_builtins.py  fuzz_cache.py  fuzz_common.py  fuzz_currency.py  fuzz_cursor.py  fuzz_dates.py  fuzz_diagnostics.py  fuzz_evolution.py  fuzz_fiscal.py  fuzz_fuzz_numbers.py  fuzz_graph.py  fuzz_integrity.py  fuzz_introspection.py  fuzz_iso.py  fuzz_lock.py  fuzz_negotiator.py  fuzz_numbers.py  fuzz_oom.py  fuzz_perf.py  fuzz_plural.py  fuzz_resolver.py  fuzz_resolver_perf.py  fuzz_resolver_semantic.py  fuzz_roundtrip.py  fuzz_runtime.py  fuzz_scope.py  fuzz_security.py  (+30 more)
fuzz/seeds/: 02_message_with_variable.ftl  03_term_definition.ftl  04_attributes.ftl  05_select_expression.ftl  06_number_literals.ftl  07_comments.ftl  08_multiline_pattern.ftl  09_function_calls.ftl  10_string_literals.ftl  11_term_with_attributes.ftl  12_nested_placeables.ftl  13_unicode_content.ftl  15_complex_select.ftl  16_message_reference.ftl  17_term_arguments.ftl  18_whitespace_variations.ftl  19_empty_patterns.ftl  20_special_characters.ftl  22_pathological_select.ftl  23_stress_comments.ftl  24_cyclic_references.ftl  27_large_resource.ftl  28_mixed_indentation.ftl  29_bidi_isolating.ftl  33_attribute_only.ftl  34_empty_message.ftl  35_error_recovery.ftl  36_function_chaining.ftl  37_large_numbers.ftl  roundtrip_comments.ftl  roundtrip_complexity.ftl  unicode_norm_check.ftl
fuzz_atheris/: README.md  __init__.py  _inactive_fuzz_bridge.py  _inactive_fuzz_builtins.py  _inactive_fuzz_cache.py  _inactive_fuzz_integrity.py  _inactive_fuzz_interpreter_pool.py  _inactive_fuzz_introspection.py  _inactive_fuzz_iso.py  _inactive_fuzz_localization.py  _inactive_fuzz_lock.py  _inactive_fuzz_serializer.py  fuzz_atheris_replay_finding.py  fuzz_bridge.py  fuzz_builtins.py  fuzz_cache.py  fuzz_common.py  fuzz_currency.py  fuzz_cursor.py  fuzz_dates.py  fuzz_diagnostics_formatter.py  fuzz_fiscal.py  fuzz_graph.py  fuzz_integrity.py  fuzz_introspection.py  fuzz_iso.py  fuzz_locale_context.py  fuzz_localization.py  fuzz_lock.py  fuzz_numbers.py  fuzz_oom.py  fuzz_parse_currency.py  fuzz_parse_decimal.py  fuzz_plural.py  fuzz_roundtrip.py  fuzz_runtime.py  fuzz_scope.py  fuzz_serializer.py  fuzz_structured.py  mypy.ini  (+1 more)
scripts/: analyze_test_smells.py  benchmark.sh  bump-version.sh  check-atheris.sh  corpus-health.py  extract-changelog.sh  fuzz-atheris.sh  fuzz-hypothesis.sh  fuzz.sh  fuzz_atheris.sh  fuzz_atheris_corpus_health.py  fuzz_atheris_repro.py  fuzz_corpus_health.py  fuzz_hypofuzz.sh  fuzz_hypofuzz_repro.py  fuzz_repro.py  lint.sh  list-failures.sh  publish-github-release-assets.sh  release.sh  replay-failures.sh  repro.py  run-property-tests.sh  run_examples.py  test.sh  validate_docs.py  validate_env.py  validate_pyi_sync.py  validate_version.py  verify-github-release.sh  verify_iso4217.py
src/ftllexengine/: __init__.py  __init__.pyi  _optional_exports.py  cache_management.py  constants.py  deprecation.py  enums.py  integrity.py  introspection.py  locale_utils.py  localization.py
temp_tools/: repro_01_single_input.py  repro_02_security_attacks.py  repro_03_harness_state.py  repro_04_expansion_no_budget.py  repro_05_expansion_leak.py  repro_06_find_cycles.py  repro_07_cycle_chain.py
tests/: .pylintrc  conftest.py  mypy.ini  strategies.py  strategy_metrics.py  test_absolute_final_coverage.py  test_analysis_graph.py  test_analysis_graph_complete_coverage.py  test_api_boundary.py  test_api_boundary_validation.py  test_api_consistency_contracts.py  test_api_contracts.py  test_architecture_contract.py  test_ast_comprehensive.py  test_ast_edge_cases.py  test_ast_tooling.py  test_ast_validation_coverage.py  test_babel_compat.py  test_babel_compat_coverage.py  test_babel_compat_protocols.py  test_babel_compat_unavailable.py  test_babel_unavailable_paths.py  test_bridge_advanced_hypothesis.py  test_bundle_100pct_coverage.py  test_bundle_100pct_final_coverage.py  test_bundle_advanced_hypothesis.py  test_bundle_batch_introspection.py  test_bundle_branch_coverage.py  test_bundle_cache_security_parameters.py  test_bundle_complete_final_coverage.py  test_bundle_comprehensive_coverage.py  test_bundle_coverage.py  test_bundle_delegation_and_options.py  test_bundle_error_handling.py  test_bundle_hypothesis.py  test_bundle_locale_date_validation.py  test_bundle_mutation_validation.py  test_bundle_remaining_coverage.py  test_bundle_rwlock_integration.py  test_bundle_state_machine.py  (+503 more)
tests/benchmarks/: __init__.py  conftest.py  test_bundle_benchmarks.py  test_localization_benchmarks.py  test_parser_benchmarks.py
tests/fuzz/: __init__.py  (+29 more)
(+367 files in other folders)
