[build-system]
requires = ["hatchling>=1.29.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = true

[tool.validate-version]
# Check for `project_version: X.Y.Z` in the YAML frontmatter of these files
frontmatter_globs = ["docs/DOC_*.md", "DOC_*.md"]
frontmatter_key = "project_version"
# Check for `**FTLLexEngine Version**: X.Y.Z` footer in these specific files
footer_files = ["docs/QUICK_REFERENCE.md", "docs/TERMINOLOGY.md"]

[tool.validate-docs]
# Glob patterns for markdown files to scan
scan_globs = ["README.md", "CHANGELOG.md", "docs/**/*.md"]
# Substrings that trigger skipping a specific FTL code block
skip_markers = [
    "# ←",
    "# INVALID",
    "WRONG",
    "FAILS",
    "doesn't work",
    "# Currently fails",
    "syntax error",
    "Parser error",
    "invalid-message",
    "parser bug",
    "useBidiMarks",
    "# Dynamic currency!",
]
# Path to the parser class used for validation
parser_path = "ftllexengine.syntax.parser:FluentParserV1"

[project]
name = "ftllexengine"
version = "0.156.0"
description = "Fluent (FTL) i18n infrastructure library: bidirectional parsing, locale-aware numbers/dates/currency, strict-mode boot validation, and Decimal precision"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    {name = "Ervins Strauhmanis"},
]
keywords = [
    # Core
    "fluent",
    "ftl",
    # Localization
    "i18n",
    "l10n",
    "localization",
    "internationalization",
    "translation",
    # Data standards
    "cldr",
    "babel",
    "locale",
    # Parsing
    "parsing",
    "currency",
    "date",
    "number",
    "decimal",
    # Features
    "plurals",
    "formatting",
    "thread-safe",
    # Infrastructure
    "strict-mode",
    "boot-validation",
    "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Babel provides CLDR locale data for locale-aware formatting and parsing.
# Required for: FluentBundle, FluentLocalization, parsing modules
# Not required for: syntax parsing (parse_ftl, serialize_ftl), AST manipulation
babel = [
    "Babel>=2.18.0,<3.0.0",
]

[dependency-groups]
dev = [
    "Babel>=2.18.0,<3.0.0",  # Required for tests (locale formatting, parsing)
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
    "pytest-benchmark>=5.2.3",
    "hypofuzz>=25.11.1",
    "psutil>=7.2.2",
    "types-psutil>=7.2.2.20260130",
]

atheris = [
    "atheris>=3.0.0; python_version < '3.14'",
]

release = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/resoltico/ftllexengine"
Documentation = "https://github.com/resoltico/ftllexengine#readme"
Repository = "https://github.com/resoltico/ftllexengine.git"
Issues = "https://github.com/resoltico/ftllexengine/issues"
Changelog = "https://github.com/resoltico/ftllexengine/blob/main/CHANGELOG.md"

[tool.hatch.build]
# Explicit license file list ensures PATENTS.md is included in wheel .dist-info/
# Hatch's default discovery matches LICEN[CS]E*, NOTICE*, COPYING*, COPYRIGHT* only;
# PATENTS.md does not match any default pattern and would be silently omitted from wheels.
license-files = ["LICENSE", "NOTICE", "PATENTS.md"]

[tool.hatch.build.targets.sdist]
# Source distribution includes:
# - Full source code (/src) - runtime code
# - Complete test suite (/tests) - for downstream packagers and verification
# - Working examples (/examples) - educational value and learning resources
# - User documentation (*.md) - offline reference and API docs
# - License files (LICENSE, NOTICE, PATENTS.md) - legal compliance
#
# IMPORTANT: Hatch uses VCS (git) mode by default and respects git tracking
# Files must be committed to git to be included in sdist
# .gitignore is always included (cannot be excluded per Hatch behavior)
only-include = [
    "/examples",
    "/src",
    "/tests",
    "/docs",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "NOTICE",
    "PATENTS.md",
    "README.md",
]

[tool.hatch.build.targets.wheel]
# Wheel contains ONLY runtime code (src/ftllexengine/)
# Automatically excludes: tests, examples, docs
# Hatch auto-detects packages in src-layout (src/ftllexengine/)
# No explicit configuration needed - hatch finds src/ftllexengine/ automatically

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "property: Property-based tests using Hypothesis",
    "slow: Slow-running tests",
    "survivability: Runtime survivability tests that detect crashes and hangs",
    "survivability_extreme: Extreme load survivability tests (manual execution only)",
    "hypofuzz: Continuous fuzzing targets for HypoFuzz framework",
    "hypothesis: Tests using Hypothesis property-based testing",
    "fuzz: Intensive fuzz tests (excluded from normal test runs)",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/ftllexengine"]
branch = true  # Track branch coverage, not just statement coverage
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95.0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "if __name__ == .__main__.:",
]

# Mypy configuration
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "babel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# concurrent.interpreters is a C-extension module (PEP 734, Python 3.14+); typeshed stubs
# are not yet complete. Runtime availability is guaranteed by the Python 3.14+ requirement.
module = "concurrent.interpreters"
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
# All calls into concurrent.interpreters (PEP 734, Python 3.14+) are untyped at the mypy
# level because the module is a C-extension without complete typeshed stubs.
module = "ftllexengine.runtime.interpreter_pool"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "atheris"
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "fuzz.*"
ignore_missing_imports = true
# Atheris has no type stubs; fuzzers use runtime contract validation that appears unreachable to mypy
disable_error_code = ["import-untyped", "attr-defined", "unreachable", "unused-ignore"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py314"  # Match minimum requires-python version

[tool.ruff.lint]
# select = ["ALL"] is the strictest posture: new Ruff rules automatically apply.
# Explicit ignore list below covers rules that are genuinely inapplicable to this project.
select = ["ALL"]
ignore = [
    # --- Docstring style (D / pydocstyle) ---
    # Project uses Google-style docstrings. pydocstyle enforces numpy/sphinx
    # conventions that conflict; the entire D family is a false-positive
    # category for this codebase.
    "D",

    # --- Formatter territory ---
    # Trailing commas (COM812) and single-line string concatenation (ISC001) are
    # formatter decisions. Not running ruff format; conflicting with manual style.
    "COM812",
    "ISC001",

    # --- Annotation style (entire ANN family) ---
    # All argument and return annotations are enforced by mypy strict — redundant in Ruff.
    # ANN401 (Any type) is legitimate in babel_compat.py where Babel's API is untyped.
    # Ignoring the prefix ignores all ANN rules regardless of Ruff version.
    "ANN",

    # --- Exception style (conflicts with existing waivers) ---
    # TRY003: Long exception messages. Conflicts with EM102 (already enabled).
    # TRY300: Return in try block; project uses early-return pattern intentionally.
    "TRY003",
    "TRY300",

    # --- Unused / inapplicable rule families ---
    "CPY",   # copyright notices — not applicable
    "INT",   # gettext i18n — not applicable
    "PD",    # pandas — not applicable
    "NPY",   # numpy — not applicable
    "DJ",    # django — not applicable
    "AIR",   # apache airflow — not applicable
    "ASYNC", # trio/anyio async — not applicable (previously "TRIO", remapped to ASYNC1xx)
    "TD",    # TODO comments — tracked in GitHub issues, not inline
    "FIX",   # FIXME/TODO/HACK markers — same as TD

    # --- Already explicitly handled ---
    "PLR0913",  # Too many arguments — acceptable for configuration objects
    "PLR2004",  # Magic values — acceptable for Fluent/FTL protocol constants
]

[tool.ruff.lint.per-file-ignores]
# PRODUCTION CODE - Architectural patterns only (real bugs fixed separately)

# Package init: Lazy imports for optional Babel dependency + TYPE_CHECKING imports for hints
# C901: clear_module_caches dispatches over 6 named cache components; structural, not accidental
"src/ftllexengine/__init__.py" = ["PLC0415", "F401", "C901"]

# Visitor pattern: N802 (visit_NodeName methods follow stdlib ast.NodeVisitor convention)
# RUF022: __all__ organized by category (public/internal) for clarity
# C901: _visit_expression dispatches over closed Expression union (one branch per AST variant)
"src/ftllexengine/introspection/message.py" = ["N802", "RUF022", "C901"]

# Analysis: C901 for detect_cycles — iterative DFS with phase-tracking; algorithmic, not accidental
"src/ftllexengine/analysis/graph.py" = ["C901"]

# Parser: Inherent complexity from EBNF grammar
# C901: Each function implements one EBNF grammar rule; branching is structural, not accidental
"src/ftllexengine/syntax/parser/core.py" = ["PLR0912", "C901"]
"src/ftllexengine/syntax/parser/rules.py" = ["PLR0911", "PLR0912", "PLR0915", "C901"]
"src/ftllexengine/syntax/parser/primitives.py" = ["C901"]

# Visitor: Commented example code + inherent complexity from AST node dispatch
# C901: generic_visit dispatches over all ASTNode types; branching from closed node set
"src/ftllexengine/syntax/visitor.py" = ["ERA001", "PLR0911", "PLR0912", "C901"]

# Serializer: Classification-dispatch model over closed grammar types
# C901: _validate_expression, _serialize_pattern, _serialize_expression — exhaustive over closed unions
"src/ftllexengine/syntax/serializer.py" = ["C901"]

# Bundle: Inherent complexity in resource validation
# C901: _format_pattern_impl coordinates multi-phase resolution with error handling
"src/ftllexengine/runtime/bundle.py" = ["PLR0912", "E501", "C901"]

# Cache: Type dispatch over heterogeneous FluentValue union (_make_hashable, _go)
# C901: Each branch handles a distinct Python type; closed dispatch is structural, not accidental
"src/ftllexengine/runtime/cache.py" = ["PLR0911", "PLR0912", "C901"]

# Resolver: Closed Expression union dispatch; one return path per variant
# C901: _resolve_pattern, _get_fallback_for_placeable — grammar dispatch
"src/ftllexengine/runtime/resolver.py" = ["PLR0911", "C901"]

# Function metadata: Lazy import for performance
"src/ftllexengine/runtime/function_metadata.py" = ["PLC0415"]

# Dates: Intentionally naive datetime (user provides timezone if needed)
"src/ftllexengine/parsing/dates.py" = ["DTZ007"]

# Currency: Inherent complexity in ambiguous symbol disambiguation
"src/ftllexengine/parsing/currency.py" = ["PLR0911", "PLR0912"]

# Validation: Inherent complexity in cross-type cycle detection algorithm
# C901: _check_undefined_references and _compute_longest_paths — graph algorithms; structural complexity
"src/ftllexengine/validation/resource.py" = ["PLR0912", "C901"]

# EXAMPLES - Educational/demonstrative code; intentional patterns documented below
# T201: print() is the output mechanism for all examples (they are scripts, not libraries)
# S101: assert used for inline validation in demo scripts, not production guards
# INP001: examples/ is not a package; standalone scripts need no __init__.py
# FBT001/FBT002/FBT003: example helpers may use simple bool flags for demo clarity
# PYI034/PYI021/PYI048: example stub files use docstrings for educational context
# TC001/TC003: examples do not need TYPE_CHECKING import optimization
# BLE001/C901: example custom-function demos legitimately catch broad exceptions
"examples/**/*.py" = ["N802", "E501", "ERA001", "PLC0415", "T201", "S101", "INP001", "FBT001", "FBT002", "FBT003", "PYI034", "TC001", "TC003", "BLE001", "C901"]
"examples/**/*.pyi" = ["PYI021", "PYI048", "PYI034"]

# FUZZ ATHERIS - Fuzzer harnesses and replay scripts; tool code, not library code
# T201/S101: fuzzers print findings and assert invariants
# EXE001: shebang present; file executability managed by git, not ruff
# FBT001/FBT002: harness functions use bool flags for control flow
# BLE001: fuzz replay scripts catch all exceptions to report crashes
# INP001: fuzz_atheris/ is not a package
# SLF001: fuzzers access private members for invariant checking (white-box fuzzing)
# TRY301: raise-in-try pattern used extensively in invariant guards; abstracting to helpers adds no value
# TC001/TC003: fuzz harnesses do not need TYPE_CHECKING optimization
# S110: try-except-pass is used intentionally to skip non-fatal errors in crash-tolerant fuzzers
# S311: random used for test data generation, not cryptography
# PERF401: fuzzer loops are not performance-critical relative to the fuzzing overhead
# ARG001: sub-handler functions in dispatch-to-sub-handlers pattern must have uniform (fdp) signatures;
#          some handlers do not consume bytes from fdp but must accept it for the dispatch interface
"fuzz_atheris/**/*.py" = ["ERA001", "T201", "S101", "S110", "S311", "EXE001", "FBT001", "FBT002", "FBT003", "BLE001", "INP001", "C901", "PLC0415", "SLF001", "TRY301", "TC001", "TC003", "PERF401", "ARG001"]

# SCRIPTS - Developer tooling; same rationale as fuzz_atheris
# T201: scripts output to terminal by design
# EXE001: shebang files; executability managed externally
# FBT001/FBT002: script helpers use bool flags
# S603: subprocess calls in repro/replay scripts are developer-controlled (not user input)
# TC003: scripts do not need TYPE_CHECKING optimization
# INP001: scripts/ is not a package
"scripts/**/*.py" = ["T201", "EXE001", "FBT001", "FBT002", "FBT003", "INP001", "C901", "BLE001", "S101", "S603", "TC001", "TC003", "PERF401"]

# TESTS - Blanket waivers for all test files
# S101: assert is the standard pytest assertion mechanism; bandit S101 targets production code
# S108: /tmp paths in tests are intentional for temp fixture directories (not production)
# S110: try-except-pass in tests catches expected failure paths without logging
# S310/S311/S603: security rules targeting production code; not applicable in controlled tests
# BLE001: broad-except used intentionally to test error isolation and exception handling
# TRY301: raise-in-try is a natural pattern for test invariant guards
# FBT001/FBT002/FBT003: test helpers and Hypothesis strategies may use bool flags
# SLF001: integration and white-box tests verify internal state via private members
# TC001/TC002/TC003: tests do not need TYPE_CHECKING import optimization
# PGH003: bare type: ignore in tests where specific codes vary across Python/mypy versions
# T201: conftest.py and some test helpers print to stdout for diagnostics
# C901: shadow_bundle.py mirrors production dispatch; structural complexity
# E501: test docstrings, FTL strings, and assertion messages may exceed 100 chars for clarity
# PERF401/PERF402: test loops are not performance-critical paths
"tests/**/*.py" = ["S101", "S108", "S110", "S310", "S311", "S603", "BLE001", "TRY301", "FBT001", "FBT002", "FBT003", "SLF001", "TC001", "TC002", "TC003", "PGH003", "T201", "C901", "E501", "PERF401", "PERF402"]

# Per-file waivers for specific test architectural patterns
"tests/test_syntax_visitor.py" = ["N802"]
"tests/test_syntax_visitor_transformer.py" = ["N802", "ARG002"]
"tests/test_syntax_visitor_property.py" = ["N802", "ARG002"]
"tests/test_syntax_ast_tooling.py" = ["N802", "ARG002"]
"tests/test_api_contracts.py" = ["PLC0415"]
"tests/test_runtime_bundle.py" = ["N802", "N806"]
"tests/test_runtime_resolver.py" = ["N802", "EM101", "PLC0415"]
"tests/test_runtime_function_registry_integration.py" = ["N802"]
"tests/test_parsing_dates.py" = ["DTZ001"]
"tests/test_parsing_*.py" = ["PLC0415"]
"tests/test_core_fiscal.py" = ["PLC0415"]
"tests/test_core_fiscal_property.py" = ["PLC0415"]
"tests/test_syntax_spec_conformance.py" = ["ARG002", "PLC0415"]
"tests/test_syntax_parser_systematic.py" = ["ARG002"]
"tests/test_syntax_parser_multiline_property.py" = ["E721", "E501"]
"tests/test_syntax_cursor_span.py" = ["PLC0415"]
"tests/test_runtime_function_bridge_validation.py" = ["PLC0415"]
"tests/test_init_module.py" = ["PLC0415", "EM101"]
"tests/test_runtime_metamorphic_property.py" = ["PLC0415"]
"tests/test_regression_parser_l10n_rounding.py" = ["PLC0415"]
"tests/test_rwlock_core.py" = ["PLC0415"]
"tests/conftest.py" = ["PLC0415"]
"tests/helpers/type_assertions.py" = ["PLC0415"]
"tests/test_syntax_parser_*.py" = ["PT018"]
# Test files using function-local imports for test isolation or import-error-path testing.
# These are permanent architectural patterns: tests that simulate lazy-load paths, circular
# import scenarios, or cache reset sequences require imports inside test methods.
"tests/test_runtime_behavioral_contracts.py" = ["PLC0415"]
"tests/test_runtime_function_bridge.py" = ["PLC0415"]
"tests/test_runtime_function_metadata_property.py" = ["PLC0415"]
"tests/test_runtime_resolver_core.py" = ["PLC0415"]
"tests/test_runtime_resolver_error_fallback.py" = ["PLC0415"]
"tests/test_runtime_resolver_selection.py" = ["PLC0415"]
"tests/test_runtime_security_depth.py" = ["PLC0415"]
"tests/test_syntax_validator_property.py" = ["PLC0415"]
"tests/test_introspection_iso.py" = ["PLC0415", "ARG001"]
"tests/test_regression_rwlock_currency_spans.py" = ["PLC0415"]
"tests/test_runtime_locale_utils.py" = ["SIM117"]
"tests/fuzz/test_parsing_currency_property.py" = ["PLC0415"]
"tests/fuzz/test_runtime_bundle_concurrent.py" = ["PLC0415"]
"tests/fuzz/test_syntax_validator_property.py" = ["PLC0415"]
"tests/test_parsing_babel_compat.py" = ["PLC0415"]
"tests/test_integration_coverage.py" = ["N802", "PLC0415"]
"tests/test_syntax_validator.py" = ["PLC0415"]
"tests/test_validation_resource.py" = ["PLC0415"]
# Fuzzing: pytestmark precedes later imports for file-level marker application
"tests/fuzz/test_syntax_parser_grammar.py" = ["E402"]
"tests/fuzz/test_syntax_parser_whitespace.py" = ["E402"]
"tests/fuzz/test_parsing_numbers_property.py" = ["PLC0415"]
